@@ -1,3 +1,8 @@
+2005-05-11  Mike Kestner  <mkestner@novell.com>
+
+	* generator/ObjectGen.cs : default empty assembly names for the
+	mapper.  [Fixes #74769]
+
 2005-05-10  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Object.custom : Dispose on a Destroyed event.
